--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,9 @@ header {
     background-color: #f8f1e7;
     border-bottom: 1px solid rgba(0, 0, 0, 0.082);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.11);
+    position: fixed;
+    top: 0;
+    width: 100vw;
 }
 
 .navbar {
@@ -107,7 +110,7 @@ header {
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 120px;
 
 }
 
@@ -265,6 +268,11 @@ header {
     font-family: flame-sans;
     height: 50px;
     font-size: 16px;
+    color: #502314;
+}
+
+.footer-navbar a {
+    text-decoration: none;
     color: #502314;
 }
 /* footer ended  */
