--- a/styles/style.css
+++ b/styles/style.css
@@ -287,6 +287,10 @@ header {
     .nav-logo {
         justify-self: flex-start;
     }
+    .navbar {
+        padding: 0 20px;
+    }
+
 
     .hero-section {
         display: flex;
