--- a/styles/menu.css
+++ b/styles/menu.css
@@ -105,7 +105,7 @@ header {
 
 /* menu section started  */
 .menu-section {
-    height: 80vw 
+    height: 80vh 
 }
 .menu-heading {
     display: flex;
