--- a/styles/menu.css
+++ b/styles/menu.css
@@ -155,7 +155,11 @@ header {
     justify-content: space-around;
     align-items: center;
     font-family: flame-sans;
-    
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    background-color: #f8f1e7;
+    padding: 20px 0;
     font-size: 16px;
     color: #502314;
     margin-top: 100px
