--- a/styles/offers.css
+++ b/styles/offers.css
@@ -175,7 +175,11 @@ header {
     justify-content: space-around;
     align-items: center;
     font-family: flame-sans;
-    height: 50px;
+    background-color: #f8f1e7;
+    padding: 20px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
     font-size: 16px;
     color: #502314;
 }
