--- a/styles/rewards.css
+++ b/styles/rewards.css
@@ -175,7 +175,12 @@ header {
     justify-content: space-around;
     align-items: center;
     font-family: flame-sans;
-    height: 50px;
+    background-color: #f8f1e7;
+     padding: 20px 0;
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    padding: 20px 0;
     font-size: 16px;
     color: #502314;
 }
