--- a/styles/offers.css
+++ b/styles/offers.css
@@ -134,6 +134,7 @@ header {
     flex-direction: column;
     gap: 10px;
     justify-self: center;
+    margin-bottom: 70px;
 }
 
 .promo-item img {
@@ -179,6 +180,7 @@ header {
     padding: 20px 0;
     position: fixed;
     bottom: 0;
+    margin-top: 50px;
     width: 100vw;
     font-size: 16px;
     color: #502314;
