--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,7 @@ header {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .flame-bold {
